# firetrail

./: .clippy.toml  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  deny.toml  dist-workspace.toml  justfile  requirements.md  rustfmt.toml
crates/ft-cli/: Cargo.toml
crates/ft-cli/src/: cli.rs  context.rs  error.rs  index_adapter.rs  main.rs  output.rs  prompt.rs  workspace.rs
crates/ft-cli/src/commands/: board.rs  check.rs  claim.rs  close.rs  compact.rs  create.rs  criteria.rs  daemon_cmd.rs  diff.rs  doc.rs  doctor.rs  graph.rs  hook.rs  identity.rs  import_cmd.rs  index_cmd.rs  init.rs  link.rs  lint.rs  list.rs  memory_create.rs  memory_views.rs  merge_driver.rs  migrate.rs  mod.rs  prime.rs  profile.rs  promote_import.rs  review.rs  salvage.rs  scope.rs  search.rs  server_hooks.rs  show.rs  sync_cmd.rs  trust.rs  ui.rs  update.rs  upgrade.rs  verify.rs
crates/ft-cli/templates/: AGENTS_FIRETRAIL_BLOCK.md  SKILL.md
crates/ft-cli/tests/: doc_frontmatter.rs  init_and_doctor.rs  m3_search_prime_daemon.rs  m4_pr_surface.rs  m5_identity_scope.rs  m6_import_surface.rs  memory_create.rs  memory_list_and_check.rs  memory_trust.rs  migrate_embeddings.rs  profile_and_doctor.rs  salvage.rs  scenarios.rs  scope_write.rs  strict_identity_and_history.rs  ui_subcommand.rs  upgrade.rs  verify_and_compact.rs  work_graph_claim.rs  work_graph_create.rs  work_graph_criteria_close.rs  work_graph_link.rs  work_graph_views.rs
crates/ft-cli/tests/common/: mod.rs
crates/ft-cli/tests/scenarios/: m1-ac-enforcement.yml  m1-clean-clone.yml  m1-conflict-resolution.yml  m1-happy-path.yml  m1-index-rebuild.yml  m2-force-push-detection.yml  m2-incident-finding-flow.yml  m2-salvage.yml  m2-trust-transitions.yml  m3-daemon-lifecycle.yml  m3-index-rebuild.yml  m3-prime-budget.yml  m3-prime-query.yml  m3-search-lexical.yml  m3-trust-weighting.yml  m4-evidence-required.yml  m4-force-push-detection.yml  m4-incomplete-ac.yml  m4-merge-driver.yml  m4-mixed-commit.yml  m4-secret-scan.yml  m5-external-mode.yml  m5-multi-machine-engineer.yml  m5-multi-scope-incident.yml  m5-offboarding.yml  m5-pilot-rollout.yml  m6-import-apply.yml  m6-import-dry-run.yml  m6-promotion.yml
crates/ft-cli/tests/snapshots/: work_graph_views__board_markdown.snap  work_graph_views__graph_markdown.snap
crates/ft-core/: Cargo.toml
crates/ft-core/examples/: export_schema.rs
crates/ft-core/src/: acceptance.rs  builder.rs  enums.rs  error.rs  hash.rs  id.rs  identity.rs  label.rs  lib.rs  record.rs  relation.rs  schema.rs
crates/ft-core/tests/: doc_kind.rs  memory_kinds.proptest-regressions  memory_kinds.rs  roundtrip.rs  testkit_sanity.rs
crates/ft-embed/: Cargo.toml
crates/ft-embed/src/: cache.rs  config.rs  daemon.rs  download.rs  embedder.rs  error.rs  lib.rs  onnx.rs  service.rs
crates/ft-embed/tests/: onnx_bge.rs
crates/ft-git/: Cargo.toml
crates/ft-git/src/: lib.rs
crates/ft-git/tests/: glob_proptest.rs  integration.rs
crates/ft-history/: Cargo.toml
crates/ft-history/src/: append.rs  compact.rs  error.rs  kind.rs  lib.rs  verify.rs
crates/ft-history/tests/: integration.rs  proptest_chain.rs
crates/ft-identity/: Cargo.toml
crates/ft-identity/src/: capabilities.rs  claim.rs  lib.rs  registry.rs  sweep.rs  trailers.rs
crates/ft-identity/tests/: git_config_integration.rs
crates/ft-import/: Cargo.toml
crates/ft-import/src/: adapter.rs  convert.rs  error.rs  import.rs  lib.rs  parse.rs  promote.rs  quarantine.rs  source.rs
crates/ft-index/: Cargo.toml
crates/ft-index/src/: error.rs  index.rs  lib.rs  schema.rs  storage.rs  types.rs
crates/ft-index/tests/: integration.rs  perf.rs
crates/ft-ops/: Cargo.toml
crates/ft-ops/src/: error.rs  events.rs  files.rs  identity.rs  lib.rs  search.rs  synthetic_embed.rs  workspace.rs
crates/ft-ops/src/audit/: criteria.rs  diff.rs  graph.rs  lint.rs  mod.rs  review.rs  verify.rs
crates/ft-ops/src/docs/: mod.rs
crates/ft-ops/tests/: audit.rs  docs.rs  events.rs  files.rs  identity.rs  memory.rs  profile.rs  scope.rs  smoke.rs  tickets.rs
crates/ft-pr/: Cargo.toml
crates/ft-pr/src/: cache.rs  error.rs  lib.rs  merge.rs  options.rs  path.rs  report.rs  validator.rs
crates/ft-pr/tests/: merge.rs  rules.rs
crates/ft-prime/: Cargo.toml
crates/ft-prime/src/: error.rs  estimate.rs  lib.rs  options.rs  pack.rs  render.rs  score.rs  select.rs
crates/ft-prime/tests/: prime.rs
crates/ft-scope/: Cargo.toml
crates/ft-scope/src/: codeowners.rs  conflict.rs  error.rs  lib.rs  registry.rs  writer.rs
crates/ft-scope/tests/: registry.rs  writer.rs
crates/ft-search/: Cargo.toml
crates/ft-search/src/: engine.rs  error.rs  hit.rs  kind.rs  lib.rs  query.rs  ranking.rs  schema.rs  sources.rs
crates/ft-search/tests/: integration.rs
crates/ft-storage/: Cargo.toml
crates/ft-storage/src/: change.rs  compact.rs  config.rs  embedded.rs  error.rs  external.rs  filter.rs  history.rs  lib.rs  profile.rs  refs.rs  storage.rs  validate.rs
crates/ft-storage/tests/: external_mode.rs  path_props.rs
crates/ft-testkit/: Cargo.toml
crates/ft-testkit/src/: assertions.rs  error.rs  factories.rs  lib.rs  mock_embedder.rs  paths.rs  repo.rs  scenario.rs
crates/ft-testkit/tests/: integration.rs  property.rs
crates/ft-trust/: Cargo.toml
crates/ft-trust/src/: body.rs  error.rs  lib.rs  policy.rs  state_machine.rs  transition.rs
crates/ft-trust/tests/: props.rs  stale.rs  state_machine.rs
crates/ft-ui/: Cargo.toml
crates/ft-ui/src/: assets.rs  auth.rs  error.rs  lib.rs  main.rs  server.rs  sse.rs
crates/ft-ui/tests/: audit_routes.rs  e2e_smoke.rs  epics_routes.rs  files_routes.rs  identity_routes.rs  memory_routes.rs  profile_routes.rs  scope_routes.rs  search_routes.rs  server.rs  tickets_routes.rs  trust_routes.rs
crates/ft-ui/web/: eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
crates/ft-vec/: Cargo.toml
crates/ft-vec/src/: lib.rs
crates/ft-workspace/: Cargo.toml
crates/ft-workspace/src/: lib.rs
(+430 files in other folders)
