[package]
name = "ft-embed"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Local ONNX embedding daemon and embedding cache."

[lints]
workspace = true

[features]
# `onnx` is on by default: real `bge-small-en-v1.5` inference is the intended
# out-of-the-box experience. This links the `ort` native runtime at build time.
# Build with `--no-default-features` for a hermetic, ONNX-free build (the
# `MockEmbedder` fallback still works without a model on disk).
default = ["onnx"]
# Enable the real ONNX-backed embedder (`bge-small-en-v1.5`) via `ort`.
onnx = ["dep:ort", "dep:tokenizers"]

[dependencies]
ft-core = { path = "../ft-core", version = "0.1.0" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
fs2 = { workspace = true }
ort = { workspace = true, optional = true }
tokenizers = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
