[package]
name = "ft-history"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "PR-time history compaction and prev_state_hash chain management."

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
