[package]
name = "ft-history"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "PR-time history compaction and prev_state_hash chain management."

[lints]
workspace = true

[dependencies]
ft-core = { path = "../ft-core", version = "0.0.0" }
ft-git = { path = "../ft-git", version = "0.0.0" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
ft-testkit = { path = "../ft-testkit", version = "0.0.0" }
ft-storage = { path = "../ft-storage", version = "0.0.0" }
proptest = { workspace = true }
tempfile = { workspace = true }
