[package]
name = "ft-import"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Markdown, Jira, and Confluence importers with quarantine."

[lints]
workspace = true

[dependencies]
ft-core = { path = "../ft-core", version = "0.1.0" }
ft-storage = { path = "../ft-storage", version = "0.1.0" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
ft-testkit = { path = "../ft-testkit", version = "0.1.0" }
tempfile = { workspace = true }
