[package]
name = "ft-index"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "SQLite + sqlite-vec read index for Firetrail records."

[lints]
workspace = true

[features]
# Opt-in marker for slow, fixture-heavy tests (e.g. 1000-record perf bench).
# Default `cargo test -p ft-index` does NOT enable this; CI's standard path
# stays cheap. Run with `cargo test -p ft-index --features slow-tests`.
slow-tests = []

[dependencies]
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
ft-core = { path = "../ft-core", version = "0.0.0" }
ft-git = { path = "../ft-git", version = "0.0.0" }
ft-storage = { path = "../ft-storage", version = "0.0.0" }

[dev-dependencies]
ft-testkit = { path = "../ft-testkit", version = "0.0.0" }
tempfile = { workspace = true }
