[package]
name = "ft-pr"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "PR check command and custom merge driver."

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
