[package]
name = "ft-prime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Context-pack generation for priming downstream agents."

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
