[package]
name = "ft-prime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Context-pack generation for priming downstream agents."

[lints]
workspace = true

[dependencies]
ft-core = { path = "../ft-core", version = "0.2.0" }
ft-storage = { path = "../ft-storage", version = "0.2.0" }
ft-index = { path = "../ft-index", version = "0.2.0" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
