[package]
name = "ft-scope"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Multi-scope routing and CODEOWNERS resolution."

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
