[package]
name = "ft-scope"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Multi-scope routing and CODEOWNERS resolution."

[lints]
workspace = true

[dependencies]
ft-core = { path = "../ft-core", version = "0.1.0" }
serde = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
globset = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
chrono = { workspace = true }
