[package]
name = "ft-search"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Hybrid vector + lexical search with ranking over Firetrail records."

[lints]
workspace = true

[features]
# `sqlite-vec` is on by default so vector search works out of the box. Build
# with `--no-default-features` for a lexical-only (FTS5) engine with no vector
# index. `ft-vec` isolates the one `unsafe` auto-extension call the loader needs.
default = ["sqlite-vec"]
# Enables sqlite-vec extension loading for vector search. When disabled, the
# engine operates in lexical-only fallback mode.
sqlite-vec = ["dep:sqlite-vec", "dep:ft-vec"]

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true, features = ["load_extension"] }
sqlite-vec = { workspace = true, optional = true }
ft-vec = { path = "../ft-vec", version = "0.1.0", optional = true }
ft-core = { path = "../ft-core", version = "0.1.0" }
ft-storage = { path = "../ft-storage", version = "0.1.0" }
ft-index = { path = "../ft-index", version = "0.1.0" }

[dev-dependencies]
tempfile = { workspace = true }
ft-testkit = { path = "../ft-testkit", version = "0.1.0" }
