[package]
name = "ft-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "JSON-in-Git read/write storage, embedded and external modes."

[lints]
workspace = true

[dependencies]
ft-core = { path = "../ft-core", version = "0.0.0" }
ft-git = { path = "../ft-git", version = "0.0.0" }
ft-history = { path = "../ft-history", version = "0.0.0" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
ft-testkit = { path = "../ft-testkit", version = "0.0.0" }
tempfile = { workspace = true }
proptest = { workspace = true }
