[package]
name = "ft-testkit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared test fixtures, factories, and the scenario runner."

[lints]
workspace = true

[dependencies]
ft-core = { path = "../ft-core", version = "0.0.0" }
ft-storage = { path = "../ft-storage", version = "0.0.0" }
tempfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
