[package]
name = "ft-trust"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Trust state machine, evidence model, and review workflow."

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
