[package]
name = "ft-trust"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Trust state machine, evidence model, and review workflow."

[lints]
workspace = true

[dependencies]
ft-core = { path = "../ft-core", version = "0.0.0" }
serde = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
